--- a/system-info.html
+++ b/system-info.html
@@ -72,7 +72,7 @@
                         클래스 변경이 가능합니다.</h3>
                 </li>
                 <li class="cp3">
-                    <h3>활동 기간 중 분쟁을 방지하기 위하여 ‘회원 게시판’을 통해 글 작성자가 직접 피드백을 요청하지 않는 이상,  활동 사이트 내 모든 게시글에서 회원간 그림에 대한 피드백과 지적을 허용하지 않습니다.</h3>
+                    <h3><b>활동 기간 중 분쟁을 방지하기 위하여 ‘회원 게시판’을 통해 글 작성자가 직접 피드백을 요청하지 않는 이상,  활동 사이트 내 모든 게시글에서 회원간 그림에 대한 피드백과 지적을 허용하지 않습니다.</b></h3>
                 </li>
             </ul>
         </div>
